- Changed version of NatGen to 0.8.0DEV and renewed some labels
- Program now writes an amount of time spent for generation after it is completed (was made for 0.7.13)
- Dominions database updated up to v5.57
- Magic:Access button was fixed, now it doesn't return MageWithAccess restriction as it did for some reason (was made for 0.7.13)
- Now writing more info into nation description

Content 
-----------------------------------------------------------
- Nadir and dustwalkers got nerf to dust (gold cost incr for both, rp incr for nadir)
- Zots are finally grounded and can rest
- Crabmans got nerfed cuz they are too protected and have great morale. baseprot (15->10), mor (13->9), added ressize 4.
- Added new primitive theme for crabmans as well as theme chance redone. Plus crabs can be naked. Getting low-tech themes chance is high.

Content (From unreleased 0.7.0-RC13, which at this point counts as 0.7.13 by me, cuz 13 pre-releases cmon)
-----------------------------------------------------------
- Pygmy headresses now provide 5 to 10 invulnerability
- Pygmy only and other austral themes where pygmies are troops now have buffs. Mainly allowing access to worse 5 gold pygmies (those were implemeted before, but not for the aforementioned themes)
- Pygmy Eite Archer has the amount of occurences halved now has a little cousin, a regular pygmy archer
- Colossi mages are unfinished, themes that require them now disabled
- Elite Pygmies now may have small headdresses or a leather cap
- Elite Elite Pygmies now have a chance at leather and iron caps


=============================
0.7.0-RC12 (14th of Jan 2021)
----------------------------------------------------------
note: this is the last release of Elmokkis nationgen so far, this changelog entry was added after NG-N forking.

Code
----------------------------------------------------------

Content
-----------------------------------------------------------
- Elite crabmen chassis cost bumped from 30g to 60g